tests/ui/large_enum_variant.stderr
error[E0308]: mismatched types
  --> $DIR/large_enum_variant.rs:149:24
   |
LL |     MightyBuffer([u16; U]),
   |                        ^ expected `usize`, found `u64`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
